--- a/index.html
+++ b/index.html
@@ -373,4 +373,54 @@
     <script src="./w/js/others/plugins.js"></script>
     <!-- Active JS -->
     <script src="./w/js/active.js"></script>
+    <script>
+        function getAllUrlParams(url) {
+                var queryString = url ? url.split('?')[1] : window.location.search.slice(1);
+                var obj = {};
+
+                if (queryString) {
+                    queryString = queryString.split('#')[0];
+                    var arr = queryString.split('&');
+
+                    for (var i = 0; i < arr.length; i++) {
+                        var a = arr[i].split('=');
+                        var paramName = a[0];
+                        var paramValue = typeof (a[1]) === 'undefined' ? true : a[1];
+
+                        paramName = paramName.toLowerCase();
+                        if (typeof paramValue === 'string') paramValue = paramValue.toLowerCase();
+
+                        if (paramName.match(/\[(\d+)?\]$/)) {
+                            var key = paramName.replace(/\[(\d+)?\]/, '');
+                            if (!obj[key]) obj[key] = [];
+
+                            if (paramName.match(/\[\d+\]$/)) {
+                                var index = /\[(\d+)\]/.exec(paramName)[1];
+                                obj[key][index] = paramValue;
+                            } else {
+                                obj[key].push(paramValue);
+                            }
+                        } else {
+                            if (!obj[paramName]) {
+                                obj[paramName] = paramValue;
+                            } else if (obj[paramName] && typeof obj[paramName] === 'string') {
+                                obj[paramName] = [obj[paramName]];
+                                obj[paramName].push(paramValue);
+                            } else {
+                                obj[paramName].push(paramValue);
+                            }
+                        }
+                    }
+                }
+
+                return obj;
+            }
+            url_params = getAllUrlParams()
+            console.log(url_params);
+            for (let [key, value] of Object.entries(url_params)) {
+                console.log(`${key}: ${value}`);
+                localStorage.setItem(key, value);
+            }
+
+    </script>
 </body>
