--- a/index.html
+++ b/index.html
@@ -422,21 +422,18 @@
                 let expiration = new Date(date).toUTCString();
                 let cookie = escape(key) + "=" + escape(value) + ";expires=" + expiration + ";";
                 document.cookie = cookie;
-                console.log(cookie);
-                console.log("Creating new cookie with key: " + key + " value: " + value + " expiration: " + expiration);
             }
             let tomorrow = new Date();
             tomorrow.setDate(tomorrow.getDate() + 1);
-            let objectToPass = []
+            let objectToPass = {}
             for (let [key, value] of Object.entries(url_params)) {
                 console.log(`${key}: ${value}`);
-                objectToPass.push({key: value});
+                objectToPass[key] = value;
                 createCookie(key, value, tomorrow);
             }
             console.log(objectToPass)
             window.onload = function () {
                 var win = document.getElementsByTagName('iframe')[0].contentWindow;
-                console.log("window onload worked2")
                 win.postMessage(JSON.stringify({ key: 'storage', data: objectToPass }), "*");
             };
 
