--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script>location.reload()</script>
     <script src="https://hostingdo.icpa.network/tracker.js"></script>
     <meta charset="UTF-8">
     <meta name="description" content="">
